--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  build-and-deploy:
+  build-project:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
@@ -16,15 +16,10 @@ jobs:
           npm install
           npm run lint:js
           npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.0
-        with:
-          branch: gh-pages
-          folder: build
-  test:
+  test-project:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    needs: build-project
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -41,4 +36,13 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report/
-        retention-days: 30
+        retention-days: 2
+  deploy-project:
+    runs-on: ubuntu-latest
+    needs: test-project
+    steps:
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.0
+        with:
+          branch: gh-pages
+          folder: build
