--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,13 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v4
 
       - name: Install, lint, build 🔧
         run: |
           npm install
           npm run lint:js
           npm run build
+      - uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: build
+        path: build/
+        retention-days: 1
+        
   test-project:
     timeout-minutes: 60
     runs-on: ubuntu-latest
@@ -31,7 +38,7 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       if: always()
       with:
         name: playwright-report
@@ -42,6 +49,10 @@ jobs:
     needs: test-project
     steps:
       - name: Deploy 🚀
+      - uses: actions/download-artifact@v4
+      with:
+        name: build
+        path: build/
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           branch: gh-pages
