--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,28 +5,28 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  build-project:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2.3.1
 
       - name: Install, lint, build 🔧
         run: |
           npm install
           npm run lint:js
           npm run build
+
       - uses: actions/upload-artifact@v4
       if: always()
       with:
         name: build
         path: build/
         retention-days: 1
-        
-  test-project:
+  test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    needs: build-project
+    needs: build
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -38,7 +38,7 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
@@ -46,7 +46,7 @@ jobs:
         retention-days: 2
   deploy-project:
     runs-on: ubuntu-latest
-    needs: test-project
+    needs: test
     steps:
       - name: Deploy 🚀
       - uses: actions/download-artifact@v4
