--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
@@ -17,16 +17,14 @@ jobs:
           npm run lint:js
           npm run build
 
-      - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: build
-        path: build/
-        retention-days: 1
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.0
+        with:
+          branch: gh-pages
+          folder: build
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    needs: build
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -43,17 +41,4 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report/
-        retention-days: 2
-  deploy-project:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Deploy 🚀
-      - uses: actions/download-artifact@v4
-      with:
-        name: build
-        path: build/
-        uses: JamesIves/github-pages-deploy-action@4.1.0
-        with:
-          branch: gh-pages
-          folder: build
+        retention-days: 30
