--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,11 +5,11 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  build-and-deploy:
+  build-project:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v4
 
       - name: Install, lint, build 🔧
         run: |
@@ -17,14 +17,18 @@ jobs:
           npm run lint:js
           npm run build
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+      - name: upload build artifact
+        uses: actions/upload-artifact@v3
+        if: always()
         with:
-          branch: gh-pages
-          folder: build
+          name: build
+          path: build/
+          retention-days: 2
+
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    needs: build-project
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -41,4 +45,21 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report/
+        retention-days: 2
+
+  deploy-project:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: build
+        path: build/
         retention-days: 30
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.0
+        with:
+          branch: gh-pages
+          folder: build
