--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,7 @@ jobs:
           npm run build
 
       - name: upload build artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: build
@@ -51,12 +51,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: build
-        path: build/
-        retention-days: 30
+      - name: download build artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: build
+          path: build/
+          retention-days: 30
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
