--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -56,7 +56,7 @@ jobs:
         if: always()
         with:
           name: build
-          path: build/
+          path: ./build
           retention-days: 30
 
       - name: Deploy 🚀
