made changes in playwright.yml and package.json for pipeline

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -56,8 +56,10 @@ jobs:
         if: always()
         with:
           name: build
-          path: ./build
-          retention-days: 30
+          path: build/
+          retention-days: 2
+      - name: Check downloaded artifact files
+        run: ls -R
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
