--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -64,4 +64,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           branch: master
-          folder: react-pw-js-to-do-app/build
+          folder: ../build
