--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Install, lint, build 🔧
         run: |
@@ -17,51 +17,30 @@ jobs:
           npm run lint:js
           npm run build
 
-      - name: upload build artifact
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: build
-          path: build/
-          retention-days: 2
-
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    needs: build-project
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 2
+      - name: Fix permissions
+        run: |
+          chmod -c -R +rX "_site/" | while read line; do
+          echo "::warning title=Invalid file permissions automatically fixed::$line"
+          done
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
 
   deploy-project:
-    runs-on: ubuntu-latest
     needs: build-project
-    steps:
-      - name: download build artifact
-        uses: actions/download-artifact@v4
-        if: always()
-        with:
-          name: build
-          retention-days: 2
-      - name: Check downloaded artifact files
-        run: ls -R
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.0
-        with:
-          branch: master
-          folder: build/
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
