--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v4
 
       - name: Install, lint, build 🔧
         run: |
@@ -25,6 +25,7 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    needs: build-and-deploy
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
